# AutoDoc

./: .env.example  .gitignore  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_PROGRESS.md  SECURITY_FIXES_TODO.md  SECURITY_TESTS_DOCUMENTATION.md  docker-compose.yml
.github/workflows/: README.md  ci.yml  package.yml  release.yml
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts  server.ts
backend/src/ai/: claude_vision_client.ts  content_deduplication.ts  content_structurer.ts  terminology_manager.ts
backend/src/auth/: credential_manager.ts  session_manager.ts
backend/src/browser/: browser_manager.ts  cdp_wrapper.ts  mcp_connector.ts  page_state_detector.ts
backend/src/collaboration/: ai_questioning.ts  human_observation.ts  human_questioning.ts  realtime_communication.ts  state_machine.ts
database/: schema.sql
desktop/: .gitignore  IMPLEMENTATION_STATUS.md  README.md  TEST_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  test-env.sh  vitest.config.ts
desktop/backend-bundle/: .gitkeep  README.md
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md  generate-icons.sh  icon.icns  icon.ico.backup
desktop/src-tauri/src/: config.rs  main.rs  secure_storage.rs  sidecar.rs  tray.rs  tray_v2.rs  updater.rs
docs/: PROGRESS.md  RELEASE_GUIDE.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/tests/: xss-sanitization.security.test.tsx
(+55 files in other folders)
