[package]
name = "autodoc-agent-desktop"
version = "2.0.0"
description = "AutoDoc Agent Desktop Application"
authors = ["AutoDoc Team"]
license = "MIT"
repository = "https://github.com/autodoc/agent"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.6"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
keyring = "2.3"
